@@ -40,102 +40,105 @@ along with Octave; see the file COPYING.  If not, see
 display_info *display_info::instance = 0;
 
 void
-display_info::init (void)
+display_info::init (bool query)
 {
+  if (query)
+    {
 #if defined (OCTAVE_USE_WINDOWS_API)
 
-  HDC hdc = GetDC (0);
+      HDC hdc = GetDC (0);
 
-  if (hdc)
-    {
-      dp = GetDeviceCaps (hdc, BITSPIXEL);
+      if (hdc)
+	{
+	  dp = GetDeviceCaps (hdc, BITSPIXEL);
 
-      ht = GetDeviceCaps (hdc, VERTRES);
-      wd = GetDeviceCaps (hdc, HORZRES);
+	  ht = GetDeviceCaps (hdc, VERTRES);
+	  wd = GetDeviceCaps (hdc, HORZRES);
 
-      double ht_mm = GetDeviceCaps (hdc, VERTSIZE);
-      double wd_mm = GetDeviceCaps (hdc, HORZSIZE);
+	  double ht_mm = GetDeviceCaps (hdc, VERTSIZE);
+	  double wd_mm = GetDeviceCaps (hdc, HORZSIZE);
 
-      rx = wd * 25.4 / wd_mm;
-      ry = ht * 25.4 / ht_mm;
-    }
-  else
-    warning ("no graphical display found");
+	  rx = wd * 25.4 / wd_mm;
+	  ry = ht * 25.4 / ht_mm;
+	}
+      else
+	warning ("no graphical display found");
 
 #elif defined (HAVE_FRAMEWORK_CARBON)
 
-  CGDirectDisplayID display = CGMainDisplayID ();
-
-  if (display)
-    {
-      dp = CGDisplayBitsPerPixel (display);
-
-      ht = CGDisplayPixelsHigh (display);
-      wd = CGDisplayPixelsWide (display);
-
-      CGSize sz_mm = CGDisplayScreenSize (display);
-
-      // On modern Mac systems (>= 10.5) CGSize is a struct keeping 2
-      // CGFloat values, but the CGFloat typedef is not present on
-      // older systems, so use double instead.
-      double ht_mm = sz_mm.height;
-      double wd_mm = sz_mm.width;
-
-      rx = wd * 25.4 / wd_mm;
-      ry = ht * 25.4 / ht_mm;
-    }
-  else
-    warning ("no graphical display found");
-
-#elif defined (HAVE_X_WINDOWS)
-
-  const char *display_name = getenv ("DISPLAY");
-
-  if (display_name && *display_name)
-    {
-      Display *display = XOpenDisplay (display_name);
+      CGDirectDisplayID display = CGMainDisplayID ();
 
       if (display)
 	{
-	  Screen *screen = DefaultScreenOfDisplay (display);
+	  dp = CGDisplayBitsPerPixel (display);
 
-	  if (screen)
-	    {
-	      dp = DefaultDepthOfScreen (screen);
+	  ht = CGDisplayPixelsHigh (display);
+	  wd = CGDisplayPixelsWide (display);
 
-	      ht = HeightOfScreen (screen);
-	      wd = WidthOfScreen (screen);
+	  CGSize sz_mm = CGDisplayScreenSize (display);
 
-	      int screen_number = XScreenNumberOfScreen (screen);
+	  // On modern Mac systems (>= 10.5) CGSize is a struct keeping 2
+	  // CGFloat values, but the CGFloat typedef is not present on
+	  // older systems, so use double instead.
+	  double ht_mm = sz_mm.height;
+	  double wd_mm = sz_mm.width;
 
-	      double ht_mm = DisplayHeightMM (display, screen_number);
-	      double wd_mm = DisplayWidthMM (display, screen_number);
-
-	      rx = wd * 25.4 / wd_mm;
-	      ry = ht * 25.4 / ht_mm;
-	    }
-	  else
-	    warning ("X11 display has no default screen");
+	  rx = wd * 25.4 / wd_mm;
+	  ry = ht * 25.4 / ht_mm;
 	}
       else
-	warning ("unable to open X11 DISPLAY");
-    }
-  else
-    warning ("X11 DISPLAY environment variable not set");
+	warning ("no graphical display found");
+
+#elif defined (HAVE_X_WINDOWS)
+
+      const char *display_name = getenv ("DISPLAY");
+
+      if (display_name && *display_name)
+	{
+	  Display *display = XOpenDisplay (display_name);
+
+	  if (display)
+	    {
+	      Screen *screen = DefaultScreenOfDisplay (display);
+
+	      if (screen)
+		{
+		  dp = DefaultDepthOfScreen (screen);
+
+		  ht = HeightOfScreen (screen);
+		  wd = WidthOfScreen (screen);
+
+		  int screen_number = XScreenNumberOfScreen (screen);
+
+		  double ht_mm = DisplayHeightMM (display, screen_number);
+		  double wd_mm = DisplayWidthMM (display, screen_number);
+
+		  rx = wd * 25.4 / wd_mm;
+		  ry = ht * 25.4 / ht_mm;
+		}
+	      else
+		warning ("X11 display has no default screen");
+	    }
+	  else
+	    warning ("unable to open X11 DISPLAY");
+	}
+      else
+	warning ("X11 DISPLAY environment variable not set");
 #else
 
-  warning ("no graphical display found");
+      warning ("no graphical display found");
 
 #endif
+    }
 }
 
 bool
-display_info::instance_ok (void)
+display_info::instance_ok (bool query)
 {
   bool retval = true;
 
   if (! instance)
-    instance = new display_info ();
+    instance = new display_info (query);
 
   if (! instance)
     {
